<resources>
    <string name="app_name">Acclimate</string>
    <string name="pp_title">Politique de confidentialité</string>
    <string name="pp_text">Nous utilisons votre localisation pour vous situer sur la carte (vous pouvez désactiver cette option dans vos préférences).\n
        De plus, suite à une inscription, l\'application aura possiblement accès à votre nom et email. Par défaut, vos informations sont cachées des autres usagers.\n\n
        Pour plus de détails, visitez: acclimate-web.herokuapp.com/privacy_policy.html</string>
    <string name="action_search">Recherche</string>
    <string name="profileBtn">Profile</string>
    <string-array name="severity">
        <item>Mineure</item>
        <item>Moyen</item>
        <item>Majeure</item>
        <item>Danger de vie</item>
    </string-array>
    <string-array name="alert_type">
        <item>Eau</item>
        <item>Feu</item>
        <item>Seisme</item>
        <item>Météo</item>
    </string-array>
    <string-array name="sous_type_feu">
        <item>Incendie</item>
        <item>Incendie domestique</item>
        <item>Feu de forêt</item>
        <item>Feu de brousse</item>
        <item>Autre</item>
    </string-array>
    <string-array name="sous_type_eau">
        <item>Inondation</item>
        <item>Débordement d\'égoût</item>
        <item>Débordement de rivière</item>
        <item>Autre</item>

    </string-array>
    <string-array name="sous_type_seisme">
        <item>Tremblement de terre</item>
        <item>Éboulement</item>
        <item>Crevasse</item>
        <item>Autre</item>
    </string-array>
    <string-array name="sous_type_meteo">
        <item>Pluie</item>
        <item>Orage</item>
        <item>Tempête de neige</item>
        <item>Canicule</item>
        <item>Grêle</item>
        <item>Tornade</item>
        <item>Ouragan</item>
        <item>User is a goat</item>
        <item>Autre</item>
    </string-array>
    <string name="no_connection_for_add_alert">
        Une connection à internet est requise pour ajouter une alerte.
    </string>
    <string name="no_connection_for_vote_alert">
        Une connection à internet est requise pour voter sur une alerte.
    </string>
    <string name="highlight">Bound Request</string>
    <string name="maj">Mise à jour</string>
    <string name="add">Surveiller zone</string>
    <string name="clear_MZ">Effacer zones</string>
    <string name="cB_fire">Feux</string>
    <string name="cB_water">Inondations</string>
    <string name="cB_terrain">Terrain</string>
    <string name="cB_meteo">Meteo</string>
    <string name="cB_zones">Afficher zones</string>
    <string name="cB_histo">Historique</string>
    <string name="settings">Settings</string>
    <string name="cB_users">Alertes d\'usagers</string>
    <string name="warning">Ajouter une alerte de \nquel type au serveur ?</string>
    <string name="feu">Feu</string>
    <string name="eau">Eau</string>
    <string name="vent">Météo</string>
    <string name="seisme">Terrain</string>
    <string name="cancel">Annuler</string>
    <string name="default_notification_channel_id" translatable="false">AcclimateAlert</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe (facultatif)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="loading">Chargement</string>
    <string name="verify_email">Renvoyer le email de confirmation</string>
    <string name="sign_in_email">Se connecter</string>
    <string name="register_email">S\'enregistrer</string>
    <string name="email_sign_out">Se déconnecter</string>
    <string-array name="pref_network_frequency_titles">
        <item>3 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>5 hours</item>
    </string-array>
    <string-array name="pref_network_frequency_values">
        <item>3</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
    </string-array>
    <string-array name="pref_network_auto_refresh_titles">
        <item>Jamais</item>
        <item>Rapide</item>
        <item>Moyen</item>
        <item>Long</item>
    </string-array>
    <string-array name="pref_network_auto_refresh_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_new_alert_form">Nouvelle alerte</string>
    <string name="action_settings">Settings</string>
    <string name="temp_bubble_title">Titre de l\'alerte</string>
    <string name="temp_bubble_desc">Description de l\'alerte</string>
    <string name="more_info_button_text">plus d\'info</string>
    <string name="territoire_placeholder">Territoire</string>
    <string name="form_alert_subtype">Sous-catégorie</string>
    <string name="add_photo_text">Ajoutez une photo!</string>
    <string name="button_confrim">confirmer</string>
    <string name="button_cancel">annuler</string>
    <string name="no_plus_one_on_server_error">Impossible d\'envoyer la modification, veuillez réessayer plus tard</string>
    <string name="required_auth_for_alerts">Veuillez vous identifier afin d\'ajouter un alerte.</string>
    <string name="defaul_alert_amount_value">- alertes actives</string>
    <string name="defaul_alert_user_amount_value">- saisies d\'USAGERS</string>
    <string name="on_post_alert_success">Alerte ajoutée avec succès!</string>
    <string name="on_post_alert_falure">Un problème s\'est produit pendant l\'envoi, veuillez réessayer.</string>
    <string name="same_alert">Vous ne pouvez pas voter pour votre prore alerte! Franchement &#8230;</string>
    <string name="impossible_to_vote">Désolé : impossible de voter pour l\'instant. Veuillez réessayer plus tard.</string>
    <string name="already_pressed">Vous ne pouvez pas voter deux fois la même chose sur la même alerte!</string>
    <string name="vote_completed">Merci de votre participation</string>
    <string name="register_required_to_vote">
        Veuillez vous identifier ou vous enregistrer afin de pouvoir voter sur les alertes!
    </string>
    <string name="placeHolder_alert_title">Débordement du St-Laurent entre les rues Peel et Concordia</string>
    <string name="placeholder_alert_category">Eau</string>
    <string name="placeholder_alert_subCat">Innondation</string>
    <string name="placeholder_alert_description">
        Les averses intenses ont causé un refoulement du st-laurent au centre-ville.
        Les service d\'urgence ont bloqué plusieurs rues et intersections puisque le viveau
        d\'eau atteint parfois plus d\'un mètre !
    </string>
    <string name="placeholder_alert_severité">majeure</string>
    <string name="more_info_default_severity">Sévérité : %s</string>
    <string name="more_info_default_source">Source : %s &#8212; %s</string>
    <string name="more_info_pos_default">lat : %s  lng : %s</string>
    <string name="oli_iud">"tXoW05Bv0DUGJz5BBi5UXwEPU212"</string>
    <string name="not_enough_karma_to_vote">
        Vous devez avoir au moins 5 point accumulé afin de voter pour une alert !
        Appuyez longuement sur la carte ou consulter notre <a href="www.applin.ca/acclimate/guide"> guide d\'utilisation</a>.
    </string>
    <string name="title_activity_more_info_alerts">moreInfoAlerts</string>
    <string name="alert_category">catégorie</string>
    <string name="alert_date">date</string>
    <string name="alert_subcat">sous-catégorie</string>
    <string name="alert_source">source</string>
    <string name="alert_title">titre</string>
    <string name="alert_description">description</string>
    <string name="alert_certitude">certitude</string>
    <string name="alert_severity">sévérité</string>
    <string name="moreinfo_extra_plusone">upvote</string>
    <string name="moreinfo_extra_minusone">downvote</string>
    <string name="moreinfo_user_title">utilisateurs</string>
    <string name="moreinfo_extra_photo">Image</string>
</resources>