<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.moreInfosAlerts.MoreInfoAlertsActivity"
    tools:showIn="@layout/moreinfo_activity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/moreinfo_static_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/alert_category"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/moreinfo_cat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/moreinfo_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_static_cat" />

        <TextView
            android:id="@+id/moreinfo_static_subcat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/alert_subcat"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_cat" />

        <TextView
            android:id="@+id/moreinfo_subcat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_static_subcat" />

        <TextView
            android:id="@+id/moreinfo_static_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="16dp"
            android:text="@string/alert_date"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/moreinfo_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_static_date" />

        <TextView
            android:id="@+id/moreinfo_static_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/alert_source"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_subcat" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/moreinfo_alertscore_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_subcat">

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/moreinfo_static_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/alert_title"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_source_container" />

        <TextView
            android:id="@+id/moreinfo_titre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_static_titre" />

        <TextView
            android:id="@+id/moreinfo_static_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/alert_description"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_titre" />

        <TextView
            android:id="@+id/moreinfo_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_static_desc" />

        <TextView
            android:id="@+id/moreinfo_static_certitide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/alert_certitude"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_desc" />

        <TextView
            android:id="@+id/moreinfo_certitide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_static_certitide" />

        <TextView
            android:id="@+id/moreinfo_static_severite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="32dp"
            android:text="@string/alert_severity"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_desc" />

        <TextView
            android:id="@+id/moreinfo_severite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_static_severite" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/moreinfo_extra_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_severite" />

        <LinearLayout
            android:id="@+id/moreinfo_source_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/moreinfo_alertscore_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreinfo_static_source">

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>