<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bubble_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bubble_layout_bckg"
    android:elevation="8dp">


    <TextView
        android:id="@+id/bubble_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:lineSpacingExtra="12sp"
        android:paddingBottom="@dimen/micro_margin"
        android:paddingLeft="@dimen/micro_margin"
        android:paddingTop="@dimen/micro_margin"
        android:text="@string/temp_bubble_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toTopOf="@+id/bubble_subcat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bubble_subcat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/micro_margin"
        android:text="subCat"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bubble_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bubble_title" />

    <TextView
        android:id="@+id/bubble_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/bubble_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bubble_subcat" />

    <TextView
        android:id="@+id/bubble_description"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/micro_margin"
        android:text="@string/temp_bubble_desc"
        app:layout_constraintBottom_toTopOf="@+id/bubble_more_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bubble_date"
        tools:text="descr" />

    <Button
        android:id="@+id/bubble_more_info"
        android:layout_width="0dp"
        android:layout_height="@dimen/more_info_height"
        android:layout_weight="1"
        android:background="@drawable/user_bubble_more_infos"
        android:text="@string/more_info_button_text"
        android:textColor="@color/user_buble_bckg"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>